[FIX] Added z-index to the Header nav menu

--- a/client/src/assets/styles/layouts/header.less
+++ b/client/src/assets/styles/layouts/header.less
@@ -1,5 +1,6 @@
 .header {
     position: relative;
+    z-index: 5;
     padding: 28px 0;
 
     &--active {
